--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -78,9 +78,9 @@
       margin-bottom: 20px;
     }
   </style>
-  <script src="/static/echarts.js"></script>
-  <script src="static/charts.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/static/echarts.min.js"></script>
+  <script src="/static/echarts/echarts.js"></script>
+  <script src="/static/charts/charts.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
 </head>
 
 <body>
