--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <script src="/static/echarts.js"></script>
-  <script src="/static/indivivdualCharts.js" type="text/javascript"></script>
-  <script type="text/javascript" src="/static/echarts.min.js"></script>
+  <script src="/static/echarts/echarts.js"></script>
+  <script src="/static/charts/indivivdualCharts.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
 
 </head>
 
