--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -3,6 +3,100 @@
 
 <head>
   <meta charset="UTF-8" />
+  <style>
+    body {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      padding: 20px;
+    }
+
+    
+   
+    #Store-revenue,
+    #Heatmap,
+    #PizzaSize {
+      width: 100%;
+      height: 600px;
+    }
+
+    #statsOverviewContainer {
+      grid-column: span 2;
+    }
+    .active {
+      background-color: #c0c0c0;
+    }
+
+    .chart-container {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .chart {
+      width: 48%;
+    }
+
+    #statsOverviewContainer {
+      margin-top: 20px;
+      border: 2px solid #c0c0c0;
+      border-radius: 10px;
+      padding: 10px;
+      background-color: #f9f9f9;
+    }
+
+    #statsOverview {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .stat-item {
+      background-color: #f0f0f0;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      flex: 1;
+      min-width: 150px;
+      text-align: center;
+    }
+
+    .stat-item h3 {
+      margin: 0;
+      font-size: 18px;
+    }
+
+    .stat-item p {
+      margin: 5px 0 0;
+      font-size: 14px;
+    }
+
+    .customdate {
+      margin-top: 20px;
+    }
+
+    #statsOverviewTitle {
+      text-align: center;
+      font-size: 24px;
+      margin: 0 0 10px;
+      border-bottom: 2px solid #c0c0c0;
+      padding-bottom: 5px;
+    }
+
+    .button-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .button-group {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+  </style>
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/indivivdualCharts.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
@@ -30,7 +124,7 @@
   <h1 id="Store-quality">""</h1>
   <div id="container" style="width: 600px; height: 600px"></div>
   <div id="Store-revenue" style="width: 600px; height: 600px"></div>
-  <div id="Heatmap" style="width: 1600px; height: 600px"></div>
+  <div id="Heatmap" style="width: 900px; height: 600px"></div>
   <div id="PizzaSize" style="width: 400px; height: 400px"></div>
 </body>
 <script>
