charts are now transparent

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -9,10 +9,12 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       padding: 20px;
+      background-color: rgb(173, 173, 173);
     }
 
     
    
+
     #Store-revenue,
     #Heatmap,
     #PizzaSize {
@@ -115,14 +117,14 @@
     </form>
   </div>
   </div>
-  <div id="statsOverviewContainer">
+  <div id="statsOverviewContainer"style="width: 1000px; height: 150px">
     <h2 id="statsOverviewTitle">General Statistics</h2>
     <div id="statsOverview"></div>
   </div>
   
 </div>
-  <h1 id="Store-quality">""</h1>
-  <div id="container" style="width: 600px; height: 600px"></div>
+  
+  <div id="quality" style="width: 600px; height: 600px"></div>
   <div id="Store-revenue" style="width: 600px; height: 600px"></div>
   <div id="Heatmap" style="width: 900px; height: 600px"></div>
   <div id="PizzaSize" style="width: 400px; height: 400px"></div>
