--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  
-  <style src= "/styles/indivivdualCharts.css"></style>
+  <link rel="stylesheet" type="text/css" href="/style/individualStyle.css">
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/indivivdualCharts.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
