--- a/src/frontend/styles/individualStyle.css
+++ b/src/frontend/styles/individualStyle.css
@@ -14,7 +14,7 @@ body {
 #PizzaSize {
   width: 100%;
   height: 600px;
-  outline: 4px outset rgb(46, 46, 46);
+  outline: 4px solid rgb(116, 116, 116);
 }
 
 #statsOverviewContainer {
