--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -121,6 +121,15 @@
       document.getElementById("customButton").classList.remove("active");
       document.getElementById(buttonId).classList.add("active");
     }
+  document.getElementById("Last-Year").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 12));
+  });
+  document.getElementById("Last-Quarter").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 3));
+  });
+  document.getElementById("Last-Month").addEventListener("click", function () {
+    updateCharts(subtractMonths(currentDate, 1));
+  });
 
     let best;
     let custom;
