--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div id="UI">
   <button id="redirectButton">MainPage</button>
   <button id="Last-Year">Last Year</button>
   <button id="Last-Quarter">Last Quarter</button>
@@ -20,6 +21,7 @@
       <input type="date" id="startDate" name="startDate" value="2022-12-01" required>
       <button id="customDate">"Custom Date"</button>
     </form>
+  </div>
   </div>
   </div>
   <div id="statsOverviewContainer"style="width: 1000px; height: 150px">
