--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+//hauptseite mit top 5//
+//css muss in eine extra datei//
 <head>
   <meta charset="UTF-8" />
   <style>
