HTML and Js part of Sidebar

--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/style/companyStyle.css">
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/charts.js" type="text/javascript"></script>
+  <script src="/static/UI/buttons.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
 </head>
 
@@ -28,9 +29,7 @@
       <input type="checkbox" id="nav_check" hidden>
       <nav>
           <ul>
-              <li>
-                  
-              </li>
+              
           </ul>
       </nav>
       <label for="nav_check" class="hamburger">
@@ -135,7 +134,7 @@
 
     // -------------
     statsOverview();
-    
+    sideBar();
 
     // Function to display the data in organized boxes
     
