Part of CSS for Navbar

--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -32,7 +32,7 @@
               
           </ul>
       </nav>
-      <label for="nav_check" class="hamburger">
+      <label for="nav_check" class="menu_button">
           <div></div>
           <div></div>
           <div></div>
