--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -35,6 +35,7 @@
   <div id="Store-revenue" style="width: 600px; height: 600px"></div>
   <div id="Heatmap" style="width: 900px; height: 600px"></div>
   <div id="PizzaSize" style="width: 400px; height: 400px"></div>
+  <div id="abc" style="width: 600px; height: 600px"></div>
 </body>
 <script>
   backButton();
@@ -58,6 +59,8 @@
   heatmap();
 
   pizzaSize();
+
+  abc();
 </script>
 
 </html>
