removed duplication of General Statistics

--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/charts.js" type="text/javascript"></script>
-  <script src="/static/UI/buttons.js" type="text/javascript"></script>
+  
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script type="text/javascript" src="/static/UI/buttons.js"></script>
   <style>
     #map { height: 600px; width: 50%; }
 </style>
@@ -139,7 +140,7 @@
     }
 
     // -------------
-    statsOverview();
+    statOverview();
     sideBar();
     storeLocationMap();
 
