--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -7,6 +7,7 @@
   <script src="/static/echarts/echarts.js"></script>
   <script src="/static/charts/indivivdualCharts.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
+  <script type="text/javascript" src="/static/UI/buttons.js"></script>
 
 </head>
 
@@ -49,7 +50,7 @@
   document.getElementById("Last-Month").addEventListener("click", function () {
     updateCharts(subtractMonths(currentDate, 1));
   });
-  statsOverview();
+  statOverview();
   customDate();
   
   gaugeChart();
