--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -42,6 +42,7 @@
   <div id="Heatmap" style="width: 900px; height: 600px"></div>
   <div id="PizzaSize" style="width: 400px; height: 400px"></div>
   <div id="abc" style="width: 600px; height: 600px"></div>
+  <div id="pizzaIngredients" style="width: 400px; height: 400px"></div>
 </body>
 <script>
   backButton();
@@ -58,6 +59,8 @@
   pizzaSize();
 
   abc();
+
+  pizzaIngredients();
 
 </script>
 
