--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -18,7 +18,7 @@
     #map { height: 600px; width: 50%; }
     #statsOverviewContainer { width : 50%; height: 150px; }
     #avCustomerContainer { width: 50%; height: 150px; }
-    #revenueContainer { width: 50%; height: 600px; }
+    
     #revenueBarContainer { width: 50%; height: 600px; }
 
     </style>
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+  
   <div class="button-container">
     <div class="button-group">
       <button id="bestButton">Best</button>
@@ -57,8 +58,9 @@
   </header>
 
 
-       
-
+  <div id="dashboardContainer">
+    <h1 id="dashboardTitle">Pizza Franchise</h1>  
+  </div>
   <div id="generalStatsContainer">  
     <h2 id="generalStatsTitle">General Statistics</h2>  
     <div id="statsOverviewContainer"> 
@@ -69,10 +71,10 @@
     </div>
     <div id="avCustomerContainer">
       <h3>Average Customer Data</h3>
-      <!-- Statistiken für das gewählte Datum hier einfügen -->
+      <!-- Statistiken für das gewählte Datum hier einfügen 
        <div class="avCustomer-item">number of orders</div>
        <div class="avCustomer-item">spending amount</div>
-       <div class="avCustomer-item">beispiele</div>
+       <div class="avCustomer-item">beispiele</div>-->
     </div> 
   </div>
 
