--- a/src/frontend/styles/companyStyle.css
+++ b/src/frontend/styles/companyStyle.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #b3b3b3;
+}
+
 .active {
     background-color: #c0c0c0;
   }
@@ -208,7 +212,7 @@
   } 
 
   /*Map view of all Stores*/
-#mapContainer {
+#sector3Container {
   margin-top: 20px;
   border: 2px solid #c0c0c0;
   border-radius: 10px;
@@ -218,12 +222,68 @@
   box-sizing: border-box;
 }
 
-#mapContainerTitle {
+#sector3Title {
   text-align: center;
   font-size: 24px;
   margin: 0 0 10px;
   border-bottom: 2px solid /*#c0c0c0*/;
   padding-bottom: 5px;
+}
+
+#placeholderContainer {
+  margin-top: 20px;
+  border: 2px solid #c0c0c0;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #ffffff /*#f0f0f0*/;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#placeholder {
+  width: 100%;
+  height: 4000px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+#placeholderTitle {
+  text-align: center;
+  font-size: 24px;
+  margin: 0 0 10px;
+  border-bottom: 2px solid /*#c0c0c0*/;
+  padding-bottom: 5px;
+}
+
+#placeholderContainer2 {
+  margin-top: 20px;
+  border: 2px solid #c0c0c0;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #b3b3b3 /*#f0f0f0*/;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#placeholder2 {
+  width: 100%;
+  height: 4000px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+#mapContainer {
+  margin-top: 20px;
+  border: 2px solid #c0c0c0;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #ffffff /*#f0f0f0*/;
+  width: 100%;
+  box-sizing: border-box;
 }
 #map {
   width: mapContainer width;
