--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -57,7 +57,7 @@
       </label>
   </header>
 
-
+<!--TODO add menu button-->
   <div id="dashboardContainer">
     <h1 id="dashboardTitle">@Pizza Hub</h1>  
   </div>
