Store view titles

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -38,11 +38,22 @@
   <div id="quality" style="width: 600px; height: 600px">
     <h1>Quality</h1>
   </div>
-  <div id="Store-revenue" style="width: 600px; height: 600px"></div>
-  <div id="Heatmap" style="width: 900px; height: 600px"></div>
-  <div id="PizzaSize" style="width: 400px; height: 400px"></div>
-  <div id="abc" style="width: 600px; height: 600px"></div>
-  <div id="pizzaIngredients" style="width: 600px; height: 600px"></div>
+  
+  <div id="Store-revenue" style="width: 600px; height: 600px">
+    <h1>Store Revenue</h1>
+  </div>
+  <div id="Heatmap" style="width: 900px; height: 600px">
+    <h1>Piizas sold together</h1>
+  </div>
+  <div id="PizzaSize" style="width: 400px; height: 400px">
+    <h1>Ordered Pizza Sizes</h1>
+  </div>
+  <div id="abc" style="width: 600px; height: 600px">
+    <h1>ABC Analysis</h1>
+  </div>
+  <div id="pizzaIngredients" style="width: 600px; height: 600px">
+    <h1>Ingredient Consumption in kg per Week</h1>
+  </div>
 </body>
 <script>
   backButton();
