--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -34,13 +34,14 @@
   </div>
   
 </div>
-  
-  <div id="quality" style="width: 600px; height: 600px">
-    <h1>Quality</h1>
+  <div  id="qualityC"style="width: 600px; height: 600px">
+    <div id="QualtiyT">Qualtiy</div>
+    <div id="quality" style="width: 600px; height: 600px"></div>
+    
   </div>
-  
-  <div id="Store-revenue" style="width: 600px; height: 600px">
-    <h1>Store Revenue</h1>
+  <div id="Store-revenueC" style="width: 600px; height: 600px">
+    <div id="RevenueT">Revenue </div>
+    <div id="Store-revenue" style="width: 600px; height: 600px"></div>
   </div>
   <div id="Heatmap" style="width: 900px; height: 600px">
     <h1>Piizas sold together</h1>
@@ -51,13 +52,14 @@
   <div id="abc" style="width: 600px; height: 600px">
     <h1>ABC Analysis</h1>
   </div>
-  <div id="pizzaIngredients" style="width: 600px; height: 600px">
+  <div id="pizzaIngredients" style="width: 1600px; height: 800px">
     <h1>Ingredient Consumption in kg per Week</h1>
   </div>
 </body>
 <script>
   backButton();
   timeButtons();
+  
   statOverview();
   customDate();
   
